// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiListGroupItem is rendered 1`] = `
<li
  class="euiListGroupItem"
>
  <span>
    <span
      class="euiListGroupItem__label"
    >
      Label
    </span>
  </span>
</li>
`;

exports[`EuiListGroupItem renders href 1`] = `
<li
  class="euiListGroupItem"
>
  <a
    class="euiListGroupItem__button"
    href="#"
  >
    Label
  </a>
</li>
`;
